# role-assignment-tui

./: Cargo.toml
src/: lib.rs  main.rs
src/cli/: global_args.rs
src/cli/command/: mod.rs
src/cli/command/list_resource_groups/: mod.rs
src/cli/command/resource_group_tui/: mod.rs
